--- a/master/index.html
+++ b/master/index.html
@@ -224,11 +224,17 @@ body {
   margin-left: 0px;
 }
 </style>
-<p>Welcome to the documentation site of <a href="https://github.com/symengine/symengine.R">symengine R package</a>. Currently it contains the built vignettes and helps from the package.</p>
+<p>Welcome to the documentation site of symengine R package. Currently it contains the built vignettes and helps from the package.</p>
+<div id="package-repository" class="section level3">
+<h3>Package repository</h3>
+<ul>
+<li><a href="https://github.com/symengine/symengine.R">symengine.R</a></li>
+</ul>
+</div>
 <div id="vignettes" class="section level3">
 <h3>Vignettes</h3>
 <ul>
-<li><a href="doc/quick_start.html">SymEngine Quick Start</a>.</li>
+<li><a href="doc/quick_start.html">SymEngine Quick Start</a></li>
 </ul>
 </div>
 <div id="manual-entries" class="section level3">
