--- a/master/index.html
+++ b/master/index.html
@@ -234,6 +234,7 @@ body {
 <div id="vignettes" class="section level3">
 <h3>Vignettes</h3>
 <ul>
+<li><a href="doc/odesystem.html">Numerical ODE Solver</a></li>
 <li><a href="doc/quick_start.html">SymEngine Quick Start</a></li>
 </ul>
 </div>
@@ -255,6 +256,7 @@ body {
 <li><a href="man/lambdify.html">Convert A Basic/VecBasic Object to R Function</a></li>
 <li><a href="man/mathfuns.html">Some Special Math Functions</a></li>
 <li><a href="man/Matrix.html">DenseMatrix Constructor</a></li>
+<li><a href="man/ODESystem.html">Solve System of Ordinary Differential Equations</a></li>
 <li><a href="man/S.html">Converting R object to Basic</a></li>
 <li><a href="man/solve.html">Solve Symbolic Equations</a></li>
 <li><a href="man/subs.html">Substitute Expressions in SymEngine Objects</a></li>
