--- a/master/man/lambdify.html
+++ b/master/man/lambdify.html
@@ -18,12 +18,10 @@ essentially is a S4 class extending R function.
 <h3>Usage</h3>
 
 <pre>
-lambdify(x, args, backend = c("auto", "lambda", "llvm"),
-  perform_cse = TRUE)
+lambdify(x, args, backend = c("auto", "lambda", "llvm"), perform_cse = TRUE)
 
 ## S3 method for class 'BasicOrVecBasic'
-as.function(x, args, backend = "auto",
-  perform_cse = TRUE, ...)
+as.function(x, args, backend = "auto", perform_cse = TRUE, ...)
 </pre>
 
 
