--- a/master/man/DoubleVisitor.html
+++ b/master/man/DoubleVisitor.html
@@ -17,8 +17,12 @@ and use it to numerically evaluate symbolic expressions.
 <h3>Usage</h3>
 
 <pre>
-DoubleVisitor(exprs, args, perform_cse = TRUE, llvm_opt_level = if
-  (symengine_have_component("llvm")) 3L else -1L)
+DoubleVisitor(
+  exprs,
+  args,
+  perform_cse = TRUE,
+  llvm_opt_level = if (symengine_have_component("llvm")) 3L else -1L
+)
 
 visitor_call(visitor, input, do_transpose = FALSE)
 </pre>
