--- a/master/man/symengine_info.html
+++ b/master/man/symengine_info.html
@@ -20,8 +20,10 @@ symengine_version()
 
 symengine_ascii_art()
 
-symengine_have_component(which = c("mpfr", "flint", "arb", "mpc", "ecm",
-  "primesieve", "piranha", "boost", "pthread", "llvm"))
+symengine_have_component(
+  which = c("mpfr", "flint", "arb", "mpc", "ecm", "primesieve", "piranha", "boost",
+    "pthread", "llvm")
+)
 
 symengine_compilation_notes()
 </pre>
